fixing API and connection db

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnection": "Server=DESKTOP-R4B9E8E;Database=DevTestDb;Trusted_Connection=True;"
+    "SqlConnection": "Server=DESKTOP-R4B9E8E;Database=DevTestDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
